--- a/examendiseno/vite/vite-project/EXAMEN_GUIDO/esquelet/css/style.scss
+++ b/examendiseno/vite/vite-project/EXAMEN_GUIDO/esquelet/css/style.scss
@@ -131,3 +131,23 @@ form {
     }
   }
 }
+
+// Animacion
+@keyframes cambioColor {
+  from {background-color: #444444;}
+  to { background-color: #CCCCCC;}
+}
+
+ div.wrapper div.a{
+  background-color: red;
+   animation: cambioColor 2s infinite ;
+}
+
+div.wrapper div.b{
+  animation-name: cambioColor;
+  animation-duration: 1s;
+  //animation-timing-function: linear;
+  //animation-delay: 2s;
+  animation-iteration-count: 3;
+  //animation-direction: alternate;
+}
