--- a/examendiseno/vite/vite-project/EXAMEN_GUIDO/esquelet/scss/guidoScss.scss
+++ b/examendiseno/vite/vite-project/EXAMEN_GUIDO/esquelet/scss/guidoScss.scss
@@ -47,7 +47,7 @@ Creeu l'anidació de la següent estructura */
 nav#menu {
   display: flex;
   justify-content: space-between;
-
+// Fin
   ul {
     list-style: none;
     padding: 0;
